<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <android.support.v7.widget.CardView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/black_overlay"
        android:background="@drawable/roundshapebtn"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/chk_color"
            android:layout_width="12dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/pastel_green"
            app:cardCornerRadius="0dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="34dp">

        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hr_num"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="232dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hr_view"
                app:layout_constraintTop_toBottomOf="@+id/trigger_name" />

            <TextView
                android:id="@+id/trigger_name"
                android:layout_width="197dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="46dp"
                android:text="@string/trigger_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/hr_view"
                android:layout_width="74dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="9dp"
                android:text="@string/heart_rate"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trigger_name"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/expander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="9dp"
                android:background="@color/white"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/downarrow" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/sub_item"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/black_overlay"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/hr_context_switch"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="260dp"
                    android:text="@string/hr_context"
                    android:textColor="@color/white"
                    android:trackTint="@color/blueish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_switch" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/options"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/weather_switch"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="260dp"
                    android:text="@string/weather"
                    android:textColor="@color/white"
                    android:trackTint="@color/blueish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/location_switch"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="260dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:trackTint="@color/blueish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_switch" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

</LinearLayout>
